--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,19 @@ language: python
 python:
   - '3.8'
 
-env: DJANGO_SETTINGS_MODULE="config.settings.local"
+env: DJANGO_SETTINGS_MODULE="config.settings.travis"
 
 services:
   - postgresql
 
+before_install:
+  - pip install -U pip
+  - pip --version
+
+install:
+  - pip install -r requirements.txt
+
 script:
-  - ./manage.py test -v 2
+  - python3 manage.py test
   - black . --check
   - isort . --check
