--- a/.mergify.yml
+++ b/.mergify.yml
@@ -4,7 +4,8 @@ pull_request_rules:
       - "author=GuillaumeOj"
       - "label!=work-in-progress"
       - "label!=manual merge"
-      - "status-success=Travis CI - Branch"
+      - "check-success=Travis CI - Branch"
+      - "check-success=Travis CI - Pull Request"
     actions:
       merge:
         strict: "smart"
