--- a/.mergify.yml
+++ b/.mergify.yml
@@ -9,6 +9,6 @@ pull_request_rules:
     actions:
       merge:
         strict: "smart"
-        method: "rebase"
+        method: "squash"
       delete_head_branch:
         force: True
