--- a/tox.ini
+++ b/tox.ini
@@ -25,9 +25,31 @@ commands =
     poetry run isort --check .
     poetry run flake8
 
+[testenv:coverage]
+passenv = POSTGRES_* COVERALLS_REPO_TOKEN
+allowlist_externals =
+    /usr/bin/bash
+    /bin/bash
+deps = 
+    {[testenv]deps}
+    coverage
+    coveralls
+commands =
+    poetry install -v
+    coverage run -m pytest
+    coverage report
+    coverage html
+    bash -c 'if [ $COVERALLS_REPO_TOKEN ]; then coveralls; fi'
+
 [pytest]
 DJANGO_SETTINGS_MODULE = config.settings.ci
 python_files = tests.py test_*.py *_tests.py test.py
+
+[coverage:report]
+omit = 
+    .tox/*
+    */migrations/*
+    tests/*
 
 [flake8]
 max-line-length = 88
