feat(tox): add a virtual environment for runing the application

--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,13 @@ commands =
     poetry install -v
     poetry run pytest -v {posargs}
 
+[testenv:start]
+deps = poetry
+skip_install = True
+commands = 
+    poetry install -v
+    poetry run python manage.py runserver {posargs}
+
 [testenv:pep8]
 deps =
     black
