feat(tox): add a virtual environment for init the database

--- a/tox.ini
+++ b/tox.ini
@@ -19,6 +19,14 @@ commands =
     poetry install -v
     poetry run python manage.py runserver {posargs}
 
+[testenv:init-db]
+deps = poetry
+skip_install = True
+commands = 
+    poetry install -v
+    poetry run python manage.py migrate
+    poetry run python manage.py init_db {posargs}
+
 [testenv:pep8]
 deps =
     black
