feat(tox): add a virtual environment for update the application

--- a/tox.ini
+++ b/tox.ini
@@ -27,6 +27,18 @@ commands =
     poetry run python manage.py migrate
     poetry run python manage.py init_db {posargs}
 
+[testenv:update-app]
+passenv = ENV
+deps = poetry
+skip_install = True
+allowlist_externals =
+    /usr/bin/bash
+    /bin/bash
+commands = 
+    poetry install -v
+    poetry run python manage.py migrate {posargs}
+    bash -c 'if [[ $ENV = 'PRODUCTION' ]]; then poetry run python manage.py collectstatic; fi'
+
 [testenv:pep8]
 deps =
     black
