--- a/.mergify.yml
+++ b/.mergify.yml
@@ -1,8 +1,7 @@
 pull_request_rules:
   - name: Merge Guillaume's pull requests
     conditions:
-      - "author=GuillaumeOj"
-      - "label!=work-in-progress"
+      - author=GuillaumeOj
       - "label!=manual merge"
       - "check-success=pep8"
       - "check-success=py39"
@@ -10,6 +9,22 @@ pull_request_rules:
     actions:
       merge:
         strict: "smart"
-        method: "squash"
+        method: squash
       delete_head_branch:
         force: True
+  - name: Warn on conflicts
+    conditions:
+      - conflict
+    actions:
+      comment:
+        message: This pull request is now in conflict 😕
+      label:
+        add:
+          - conflict
+  - name: Remove conflict label if not needed
+    conditions:
+      - -conflict
+    actions:
+      label:
+        remove:
+          - conflict
