--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ python-dotenv = "^0.14.0"
 progress = "^1.5"
 sentry-sdk = "^0.17.8"
 sendgrid = "^6.4.7"
+django-mjml = "^0.10.2"
 
 [tool.black]
 target-version = ["py38"]
