feat(email) add tests on the view

--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,7 @@ deps =
 skip_install = True
 commands = 
     poetry install -v
+    yarn install
     poetry run pytest -v {posargs}
 
 [testenv:pep8]
