--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,7 @@ skip_install = True
 allowlist_externals = yarn
 commands = 
     poetry install -v
+    yarn install
     poetry run pytest -v {posargs}
 
 [testenv:start]
