chore: update tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py39
+envlist = py39, pep8
 isolated_build = True
 
 [testenv]
@@ -8,6 +8,7 @@ deps =
     pytest-django
     poetry
 skip_install = True
+allowlist_externals = yarn
 commands = 
     poetry install -v
     poetry run pytest -v {posargs}
@@ -31,9 +32,7 @@ commands =
 passenv = ENV
 deps = poetry
 skip_install = True
-allowlist_externals =
-    /usr/bin/bash
-    /bin/bash
+allowlist_externals = bash
 commands = 
     poetry install -v
     poetry run python manage.py migrate {posargs}
@@ -54,9 +53,7 @@ commands =
 
 [testenv:coverage]
 passenv = POSTGRES_* COVERALLS_REPO_TOKEN
-allowlist_externals =
-    /usr/bin/bash
-    /bin/bash
+allowlist_externals = bash
 deps = 
     {[testenv]deps}
     coverage
