feat(email): install node dependencies for coverage

--- a/tox.ini
+++ b/tox.ini
@@ -54,13 +54,16 @@ commands =
 
 [testenv:coverage]
 passenv = POSTGRES_* COVERALLS_REPO_TOKEN
-allowlist_externals = bash
+allowlist_externals = 
+    bash
+    yarn
 deps = 
     {[testenv]deps}
     coverage
     coveralls
 commands =
     poetry install -v
+    yarn install
     coverage run -m pytest
     coverage report
     coverage html
