--- a/tox.ini
+++ b/tox.ini
@@ -25,6 +25,23 @@ commands =
     poetry run isort --check .
     poetry run flake8
 
+[testenv:coverage]
+passenv = POSTGRES_* COVERALLS_REPO_TOKEN
+allowlist_externals = 
+    bash
+    yarn
+deps = 
+    {[testenv]deps}
+    coverage
+    coveralls
+commands =
+    poetry install -v
+    yarn install
+    coverage run -m pytest
+    coverage report
+    coverage html
+    bash -c 'if [ $COVERALLS_REPO_TOKEN ]; then coveralls; fi'
+
 [pytest]
 DJANGO_SETTINGS_MODULE = config.settings.ci
 python_files = tests.py test_*.py *_tests.py test.py
