--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,7 @@ skip_install = True
 allowlist_externals = yarn
 commands = 
     poetry install -v
+    yarn install
     poetry run pytest -v {posargs}
 
 [testenv:start]
@@ -53,13 +54,16 @@ commands =
 
 [testenv:coverage]
 passenv = POSTGRES_* COVERALLS_REPO_TOKEN
-allowlist_externals = bash
+allowlist_externals = 
+    bash
+    yarn
 deps = 
     {[testenv]deps}
     coverage
     coveralls
 commands =
     poetry install -v
+    yarn install
     coverage run -m pytest
     coverage report
     coverage html
