feat(cd): add the CD workflow for github

--- a/tox.ini
+++ b/tox.ini
@@ -17,8 +17,10 @@ commands =
 [testenv:start]
 deps = poetry
 skip_install = True
+allowlist_externals = yarn
 commands = 
     poetry install -v
+    yarn install
     poetry run python manage.py runserver {posargs}
 
 [testenv:init-db]
@@ -27,17 +29,21 @@ skip_install = True
 commands = 
     poetry install -v
     poetry run python manage.py migrate
-    poetry run python manage.py init_db {posargs}
+    poetry run python manage.py init_db
 
-[testenv:update-app]
+[testenv:prod]
 passenv = ENV
 deps = poetry
 skip_install = True
-allowlist_externals = bash
+allowlist_externals = 
+    yarn
+    supervisorctl
 commands = 
     poetry install -v
-    poetry run python manage.py migrate {posargs}
-    bash -c 'if [[ $ENV = 'PRODUCTION' ]]; then poetry run python manage.py collectstatic; fi'
+    yarn install
+    poetry run python manage.py migrate
+    poetry run python manage.py collectstatic
+    supervisorctl restart pur-beurre-p11
 
 [testenv:pep8]
 deps =
