--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,4 +19,5 @@ jobs:
     - name: Deploy to production
       run: |
         ssh -v -i ~/.ssh/github -tto StrictHostKeyChecking=no guillaume@167.172.169.38 \
-        "cd /home/guillaume/pur-beurre-p11 && git pull --rebase && /home/guillaume/.pyenv/shims/tox -e prod && exit"
+        "cd /home/guillaume/pur-beurre-p11 && git pull --rebase && /home/guillaume/.pyenv/shims/tox -e prod"\
+        " && supervisorctl restart pur-beurre-p11 && exit"
