chore: add --noinput to collectstatic

--- a/tox.ini
+++ b/tox.ini
@@ -42,7 +42,7 @@ commands =
     poetry install -v
     yarn install
     poetry run python manage.py migrate
-    poetry run python manage.py collectstatic
+    poetry run python manage.py collectstatic --noinput
 
 [testenv:pep8]
 deps =
