chore: force recreate prod, start and init-db

--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,7 @@ commands =
 
 [testenv:start]
 deps = poetry
+recreate = true
 skip_install = True
 allowlist_externals = yarn
 commands = 
@@ -25,6 +26,7 @@ commands =
 
 [testenv:init-db]
 deps = poetry
+recreate = true
 skip_install = True
 commands = 
     poetry install -v
@@ -34,6 +36,7 @@ commands =
 [testenv:prod]
 passenv = ENV
 deps = poetry
+recreate = true
 skip_install = True
 allowlist_externals = 
     yarn
