--- a/.mergify.yml
+++ b/.mergify.yml
@@ -28,3 +28,14 @@ pull_request_rules:
       label:
         remove:
           - conflict
+  - name: Merge Dependabot's pull requests
+    conditions:
+      - "author=dependabot[bot]"
+      - "label!=manual merge"
+      - "check-success=pep8"
+      - "check-success=py39"
+      - "check-success=coverage"
+    actions:
+      merge:
+        strict: "smart"
+        method: squash 
