--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,7 +7,7 @@ updates:
     time: "09:00"
     timezone: Europe/Paris
   open-pull-requests-limit: 10
-- package-ecosystem: yarn
+- package-ecosystem: npm
   directory: "/yarn"
   schedule:
     interval: daily
