--- a/.mergify.yml
+++ b/.mergify.yml
@@ -3,9 +3,10 @@ pull_request_rules:
     conditions:
       - author=GuillaumeOj
       - "label!=manual merge"
-      - "check-success=pep8"
-      - "check-success=py39"
-      - "check-success=coverage"
+      - check-success~=^security/snyk
+      - check-success=pep8
+      - check-success=py39
+      - check-success=coverage
     actions:
       merge:
         strict: "smart"
@@ -28,14 +29,15 @@ pull_request_rules:
       label:
         remove:
           - conflict
-  - name: Merge Dependabot's pull requests
+  - name: Merge Snyk's pull requests
     conditions:
-      - "author=dependabot[bot]"
-      - "label!=manual merge"
-      - "check-success=pep8"
-      - "check-success=py39"
-      - "check-success=coverage"
+      - title~=^\[Snyk\]
+      - head~=^snyk-fix
+      - check-success~=^security/snyk
+      - check-success=pep8
+      - check-success=py39
+      - check-success=coverage
     actions:
       merge:
         strict: "smart"
-        method: squash 
+        method: rebase 
