--- a/.mergify.yml
+++ b/.mergify.yml
@@ -9,7 +9,7 @@ pull_request_rules:
     actions:
       merge:
         strict: "smart"
-        method: squash
+        method: rebase
       delete_head_branch:
         force: True
   - name: Warn on conflicts
